objects/LLC_BI__Loan__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Governing_Law_State__c</fullName>
        <description>Represents the location of the bank or the jurisdiction it is governed by, may be used to determine the state-specific language that shows up in documents.</description>
        <inlineHelpText>The jurisdiction/state law governing the loan</inlineHelpText>
        <label>Governing Law State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Gross_Collateral1_Value__c</fullName>
        <description>This field is automatically populated via roll-up. It stores the gross value of all Loan_Collateral__c records.</description>
        <label>Gross Collateral Value</label>
        <summarizedField>LLC_BI__Loan_Collateral__c.LLC_BI__Collateral_Value__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Gross_Debt_Service__c</fullName>
        <description>--DEPRECATED-- The system automatically populates this text field to calculate the value using the ratio of principal, interest, taxes, and heat to gross annual income.</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Any time a debt, income, or monthly expense is changed, this field will automatically recalculate.</inlineHelpText>
        <label>-D Gross Debt Service Ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantee_Fee_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it indicates that the guarantee fee has been paid to SBA. When disabled, it indicates that the guarantee fee has not been paid to SBA. By default, this is disabled.</description>
        <label>Guarantee Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Action_Taken__c</fullName>
        <description>This field is a optional, except for loans that require HMDA, and then it is required. It is manually populated. This field indicates the type of action the FI took on the loan, application, or preapproval request.</description>
        <inlineHelpText>Use the appropriate code to categorize the entry as a loan origination, a purchased loan, or an application (including a preapproval request) that did not result in an origination.</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Loan originated</fullName>
                </value>
                <value>
                    <fullName>Code 2—Application approved but not accepted</fullName>
                </value>
                <value>
                    <fullName>Code 3—Application denied</fullName>
                </value>
                <value>
                    <fullName>Code 4—Application withdrawn</fullName>
                </value>
                <value>
                    <fullName>Code 5—File closed for incompleteness</fullName>
                </value>
                <value>
                    <fullName>Code 6—Loan purchased by your institution</fullName>
                </value>
                <value>
                    <fullName>Code 7—Preapproval request denied</fullName>
                </value>
                <value>
                    <fullName>Code 8—Preapproval request approved but not accepted (optional reporting)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Amount__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the dollar amount granted or requested (in thousands).</description>
        <inlineHelpText>Report the dollar amount granted or requested in thousands.</inlineHelpText>
        <label>Loan Amount (Amount in Thousands)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Census_Tract_Text__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the census tract number, as defined by the U.S. Census Bureau, of the property securing the loan (or proposed to secure a loan).</description>
        <inlineHelpText>Census tract</inlineHelpText>
        <label>Census Tract (####.## format)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Census_Tract__c</fullName>
        <description>Census tract numbers as reported in the 2010 census. Used in HMDA reporting</description>
        <inlineHelpText>Census tract</inlineHelpText>
        <label>Census Tract (####.## format)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Co_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate that there is co-applicant related to the loan for purposed of HMDA reporting.</description>
        <label>Co-Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Date_Action_Taken__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the type of action the financial institution took on the loan, application, or pre-approval request.</description>
        <inlineHelpText>Enter the settlement or closing date for originations.</inlineHelpText>
        <label>Date Action Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Date_Application_Received__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the date the application was received or the date on the application form.</description>
        <inlineHelpText>The date the loan application was received by your institution.</inlineHelpText>
        <label>Date Application Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Date_Rate_Set__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This date is used to determine the average prime offer rate for a comparable transaction is the date on which the loan&apos;s interest rate was set by the financial institution for the final time before closing.</description>
        <label>Date Interest Rate Set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Denial_Reasons__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the principal reason, or reasons, for denial.  You may enter up to three (3) applicable codes.</description>
        <label>Denial Reasons (May select up to three)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Debt-to-income ratio</fullName>
                </value>
                <value>
                    <fullName>Code 2—Employment history</fullName>
                </value>
                <value>
                    <fullName>Code 3—Credit history</fullName>
                </value>
                <value>
                    <fullName>Code 4—Collateral</fullName>
                </value>
                <value>
                    <fullName>Code 5—Insufficient cash</fullName>
                </value>
                <value>
                    <fullName>Code 6—Unverifiable information</fullName>
                </value>
                <value>
                    <fullName>Code 7—Credit application incomplete</fullName>
                </value>
                <value>
                    <fullName>Code 8—Mortgage insurance denied</fullName>
                </value>
                <value>
                    <fullName>Code 9—Other</fullName>
                </value>
                <value>
                    <fullName>Withdrawn or closed for incompleteness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_FIPS_County_Code_Text__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the three-digit Federal Information Processing Standards (FIPS) County Code of the property securing the loan (or proposed to secure a loan)</description>
        <inlineHelpText>FIPS County Code</inlineHelpText>
        <label>Three Digit County Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_FIPS_County_Code__c</fullName>
        <description>--DEPRECATED-- The three-digit code for the county. Used in HMDA.</description>
        <inlineHelpText>FIPS County Code</inlineHelpText>
        <label>-D Three Digit County Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_FIPS_State_Code_Text__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the state of the property securing the loan (or that has been proposed to secure a loan).</description>
        <inlineHelpText>FIPS State Code</inlineHelpText>
        <label>Two Digit State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_FIPS_State_Code__c</fullName>
        <description>--DEPRECATED-- The two digit code for the state.</description>
        <inlineHelpText>FIPS State Code</inlineHelpText>
        <label>-D Two Digit State Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_HOEPA_Status__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the loan is a high-cost mortgage under the Home Ownership and Equity Protection Act (HOEPA).</description>
        <label>HOEPA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1 - For a loan that you originated or purchased that is subject to the Home Ownership and Equity Protection Act of 1994 (HOEPA), because the APR or the points and fees on the loan exceed the HOEPA triggers</fullName>
                </value>
                <value>
                    <fullName>Code 2 - all other cases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Lien_Status__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the property is a first or subordinate lien.</description>
        <label>Lien Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Secured by a first lien.</fullName>
                </value>
                <value>
                    <fullName>Code 2—Secured by a subordinate lien.</fullName>
                </value>
                <value>
                    <fullName>Code 3—Not secured by a lien.</fullName>
                </value>
                <value>
                    <fullName>Code 4—Not applicable (purchased loan)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Loan_ID__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the unique loan or loan application number.</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>HMDA Loan ID</inlineHelpText>
        <label>Loan Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_MSA_MD_Number_Text__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the five-digit metropolitan statistical area (MSA) number or, if available, the five-digit metropolitan division (MD) number.</description>
        <inlineHelpText>Five Digit MSA/MD Number</inlineHelpText>
        <label>Five Digit MSA/MD Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_MSA_MD_Number__c</fullName>
        <description>--Deprecated-- The five-digit metropolitan statistical area (MSA) number or, if available, the five-digit metropolitan division (MD) number. Used in HMDA reporting.</description>
        <label>-D Five Digit MSA/MD Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Occupancy__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This picklist field indicates whether the property will be owner-occupied as a principal dwelling, not owner-occupied, or N/A.</description>
        <label>Occupancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Owner-occupied as a principal dwelling</fullName>
                </value>
                <value>
                    <fullName>Code 2—Not owner-occupied as a principal dwelling</fullName>
                </value>
                <value>
                    <fullName>Code 3—Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Preapproval_Requested__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the transaction involved a pre-approval request for a home purchase loan under a pre-approval program.</description>
        <label>Request for Preapproval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Preapproval requested</fullName>
                </value>
                <value>
                    <fullName>Code 2—Preapproval not requested</fullName>
                </value>
                <value>
                    <fullName>Code 3—Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Type__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the loan or application was for manufactured housing, a multifamily dwelling, or a one- to-four-family dwelling other than manufactured housing.</description>
        <inlineHelpText>Report whether the loan or application was for manufactured housing, a multifamily dwelling, or a one- to-four-family dwelling other than manufactured housing.</inlineHelpText>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—One- to four-family dwelling (other than manufactured housing)</fullName>
                </value>
                <value>
                    <fullName>Code 2—Manufactured housing</fullName>
                </value>
                <value>
                    <fullName>Code 3—Multifamily dwelling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Purchaser_Type__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the type of entity that purchased the loan.</description>
        <label>Type of Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 0—Loan was not originated or was not sold in calendar year covered by register</fullName>
                </value>
                <value>
                    <fullName>Code 1—Fannie Mae (FNMA)</fullName>
                </value>
                <value>
                    <fullName>Code 2—Ginnie Mae (GNMA)</fullName>
                </value>
                <value>
                    <fullName>Code 3—Freddie Mac (FHLMC)</fullName>
                </value>
                <value>
                    <fullName>Code 4—Farmer Mac (FAMC)</fullName>
                </value>
                <value>
                    <fullName>Code 5—Private securitization</fullName>
                </value>
                <value>
                    <fullName>Code 6—Commercial bank, savings bank, or savings association</fullName>
                </value>
                <value>
                    <fullName>Code 7—Life insurance company, credit union, mortgage bank, or finance company</fullName>
                </value>
                <value>
                    <fullName>Code 8—Affiliate institution</fullName>
                </value>
                <value>
                    <fullName>Code 9—Other type of purchaser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Purpose__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the transaction is for home purchase, home improvement, refinancing, cash-out refinancing, or another purpose.</description>
        <inlineHelpText>HMDA Loan Purpose</inlineHelpText>
        <label>Purpose of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Home purchase</fullName>
                </value>
                <value>
                    <fullName>Code 2—Home improvement</fullName>
                </value>
                <value>
                    <fullName>Code 3—Refinancing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Rate_Spread__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the rate spread which is the difference between the annual percentage rate and average prime offer. The price data takes the form of a &quot;rate spread.&quot; Lenders must report the spread (difference) between the annual percentage rate (APR) on a loan and the rate on treasury securities of comparable maturity—but only for loans with spreads above designated thresholds. So rate spreads are reported for some, but not all, reported home loans. The rate spread, along with Lien Status and HOEPA, help interpret the pricing data.</description>
        <label>Rate Spread (##.## format)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Record_Type__c</fullName>
        <description>This field is used to determine which HMDA route/field set (2017 or 2018) will be presented to the user for this loan when collecting HMDA Loan and Entity Compliance information.</description>
        <inlineHelpText>HMDA Loan Purpose</inlineHelpText>
        <label>HMDA Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMDA-Effective-2017</fullName>
                </value>
                <value>
                    <fullName>HMDA-Effective-2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be manually selected, or can be set to be automatically set via the questionnaire. When selected, it indicates that this the loan falls under a category that makes it HMDA reportable. When unselected the loan is not HMDA reportable. By default, this field is unselected</description>
        <label>HMDA Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Type__c</fullName>
        <description>This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the loan or application is insured by the Federal Housing Administration, guaranteed by the Veterans Administration, Rural Housing Service, or Farm Service Agency.</description>
        <inlineHelpText>HMDA Loan Type</inlineHelpText>
        <label>Type of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Conventional (any loan other than FHA, VA, FSA, or RHS loans)</fullName>
                </value>
                <value>
                    <fullName>Code 2—FHA-insured (Federal Housing Administration)</fullName>
                </value>
                <value>
                    <fullName>Code 3—VA-guaranteed (Veterans Administration)</fullName>
                </value>
                <value>
                    <fullName>Code 4—FSA/RHS-guaranteed (Farm Service Agency or Rural Housing Service)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This reference field indicates the highest level loan in a multitiered facility. It is one of the components that determines the hierarchical tree structure used for navigation and visual representation of the multi-tiered facility. When importing existing loans into a hierarchal structure, the highest loan in the hierarchy must be specified to accurately depict the structure.</description>
        <label>Highest</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Loans (Highest)</relationshipLabel>
        <relationshipName>HighestLoans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should not be altered. This field is used by the nCino Data Administrator to indicate loans that were created prior to nCino.</description>
        <inlineHelpText>The Imported flag represents legacy loans that were created, processed and booked prior to the adoption of nCino.</inlineHelpText>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index_Value__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix.</description>
        <inlineHelpText>This system-populated field displays the current index value percentage.</inlineHelpText>
        <label>Index Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index__c</fullName>
        <description>This field is optional. It is manually selected. It is used to specify the index the lending rate follows.</description>
        <label>Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prime</fullName>
                </value>
                <value>
                    <fullName>Libor</fullName>
                </value>
                <value>
                    <fullName>Treasury Constant Maturity - 10 Year +</fullName>
                </value>
                <value>
                    <fullName>Treasury Constant Maturity - 5 Year +</fullName>
                </value>
                <value>
                    <fullName>LIB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Advance__c</fullName>
        <description>This field is optional. It is manually populated. This currency field is used to specify the dollar amount being initially funded at closing.</description>
        <label>Initial Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__InterestRate__c</fullName>
        <description>This field is required. It is manually populated. It defines the interest rate for this loan at the time of origination/closing.</description>
        <inlineHelpText>Total interest rate to the borrower, including prime</inlineHelpText>
        <label>Interest Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Accrual_Method__c</fullName>
        <description>This field is manually selected. This field sets the interest accrual methodology for determining the amount of interest owed per period. It is used for Rate &amp; Payment streams.</description>
        <label>Interest Accrual Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30_360</fullName>
                </value>
                <value>
                    <fullName>Actual_360</fullName>
                </value>
                <value>
                    <fullName>Actual_365</fullName>
                </value>
                <value>
                    <fullName>Actual_Actual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Amount_Paid__c</fullName>
        <description>This field is optional. It is manually populated and represents the total amount of interest paid so far.</description>
        <inlineHelpText>The amount of interest paid to date.</inlineHelpText>
        <label>Interest (Amt) Paid to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Only_Months__c</fullName>
        <description>This field is optional. It is manually populated. It is used to specify the number of monthly interest-only payments for this loan.</description>
        <inlineHelpText>Number of payment months that are interest only. Don&apos;t include these months in the total month terms field above.</inlineHelpText>
        <label>Interest Only Months</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Paid_To_Date__c</fullName>
        <description>This field is optional. It is manually populated. It is used to the specify the date through which interest has been paid.</description>
        <label>Interest Paid To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Adjustment_Frequency__c</fullName>
        <description>This field is optional. It is manually populated. It is used to specify how often an interest rate can be adjusted (e.g., Weekly, Monthly, Quarterly, Annually, etc.).</description>
        <label>Interest Rate Adjustment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Every Two Years</fullName>
                </value>
                <value>
                    <fullName>Every Three Years</fullName>
                </value>
                <value>
                    <fullName>Every Five Years</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Percent__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix. The system adds this percentage to the index to determine the applicable rate for the account.</description>
        <inlineHelpText>This system-populated field displays the percentage that the system adds to the index to determine the applicable rate for the account.</inlineHelpText>
        <label>Interest Rate Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically selected. This field is utilized for trigger approval process actions that add loan team members to the loan for the user to view. Loan team members are populated from queues and users chosen to approve items.</description>
        <inlineHelpText>This field is utilized for trigger approval process actions that add loan team members
            to the loan for the user to view. Loan Team Members are populated from queues and users
            chosen to approve items.</inlineHelpText>
        <label>ApprovalTriggerField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Booked__c</fullName>
        <description>This field is automatically selected via formula. When enabled, it indicates a loan has met the stage and status requirements that a financial institution considers to be booked. This is to allow an insight into how many loans have been booked, without having to check the actual loan stage. When disabled, the loan is not booked. By default, it is disabled.</description>
        <formula>CONTAINS(LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Booked__r.LLC_BI__All_Values__c, LLC_BI__Stage_And_Status__c)</formula>
        <label>Is Booked</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>